# Irminsul

./: Cargo.toml  Readme.md  irminsul.code-workspace
src/: main.rs
src/modules/: config.rs  mod.rs  node.rs  treemap.rs
src/modules/modes/: mix.rs  mod.rs  notify.rs  poll.rs
src/utils/: common_path.rs  get_last_modified.rs  mod.rs  pathmap.rs  treemap.rs
