[package]
name = "watch-rs"
version = "0.1.0"
edition = "2021"
authors = ["Flamindemigod"]
description = "Simple File Watcher and Command Runner"

[dependencies]
anyhow = "1.0.75"
clap = {version = "4.4.6", features = ["derive"]}
log = {version = "0.4.20", features = ["release_max_level_info"] }
normpath = "1.1.1"
glob = "0.3.1"
serde = {version = "1.0.189", features = ["derive", "rc"]}
serde_json = "1.0.107"
stderrlog = {version = "0.5.4", default-features = false}
subprocess = "0.2.9"
rayon = "1.8.0"

[dev-dependencies]
assert_unordered = "0.3.5"

[features]
default = ["notify", "timestamps", "poll"]
poll = []
notify = []
timestamps = ["stderrlog/timestamps"]
